[package]
name = "spi-flash"
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>", "Henrik Böving <hargonix@gmail.com>"]
edition = "2018"
description = "A generic driver for different SPI Flash and EEPROM chips"
repository = "https://github.com/technocreatives/spi-flash.git"
keywords = ["embedded-hal-driver", "serial", "flash", "eeprom", "spi"]
categories = ["embedded"]
readme = "README.md"
license = "0BSD"

[dependencies]
embedded-hal = "0.2.3"
log = "0.4.6"
bitflags = "1.0.4"